Particles : Keyed Physics target UI greyed out as well as crash when clicking on a particle slot without a valid target #69741

Closed
opened 2019-09-11 09:57:04 +02:00 by Fernando · 10 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Quadro M5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 372.90

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
[Blender closes up when clicking particle system slot]

Exact steps for others to reproduce the error

{F7734234}- Crash]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Quadro M5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 372.90 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** [Blender closes up when clicking particle system slot] **Exact steps for others to reproduce the error** - Open the file - Click on particle system slot [countdown.blend1](https://archive.blender.org/developer/F7734233/countdown.blend1) {[F7734234](https://archive.blender.org/developer/F7734234/countdown.blend1)}- Crash] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @JhonnyMora

Added subscriber: @JhonnyMora

Added subscriber: @shiro-1

Added subscriber: @shiro-1

Using the provided blend files i can assess that:

  • The crash not only happens by clicking on the particle system slot, it can also be triggered by going into the modifiers panel, clicking on the particle system modifier's name, and then clicking out. Pressing Esc to cancel editing does not trigger the crash.
  • It can also be triggered by going to the outliner, expanding the practice collection, hiding and the re-hiding the Cube object
    The log file reads:
Particle distribution error: Nothing to emit from!
Error   : EXCEPTION_ACCESS_VIOLATION

This crash can no longer be triggered with the previous circumstances when the following is done:
Selecting any object in Particle Settings/Physics/Relations/Target Object
By doing this, the crash doesn't happen under any of the circumstances listed above.
I'm gonna try to dig into this

Using the provided blend files i can assess that: - The crash not only happens by clicking on the particle system slot, it can also be triggered by going into the modifiers panel, clicking on the particle system modifier's name, and then clicking out. Pressing Esc to cancel editing does not trigger the crash. - It can also be triggered by going to the outliner, expanding the practice collection, hiding and the re-hiding the Cube object The log file reads: ``` Particle distribution error: Nothing to emit from! Error : EXCEPTION_ACCESS_VIOLATION ``` This crash can no longer be triggered with the previous circumstances when the following is done: Selecting any object in `Particle Settings/Physics/Relations/Target Object` By doing this, the crash doesn't happen under any of the circumstances listed above. I'm gonna try to dig into this

This didn't happen in blender 2.79b

This didn't happen in blender 2.79b

it doesn't happen either if you have another particle system with no empty target object on a relation in the keyed physics type. Setting the other particle system physics type to keyed with no target object leads back to crashing

it doesn't happen either if you have another particle system with no empty target object on a relation in the keyed physics type. Setting the other particle system physics type to keyed with no target object leads back to crashing
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, problem seems to be twofold:

  • under Relations, the Target Object as well as System counter should still be active when you dont have a valid particle target specified [ after all, this is how you would pick a valid one ;) ]
  • crash should not happen

checking...

Can confirm, problem seems to be twofold: - under Relations, the Target Object as well as System counter should still be active when you dont have a valid particle target specified [ after all, this is how you would pick a valid one ;) ] - crash should not happen checking...
Philipp Oeser changed title from Particle system slot to Particles : Keyed Physics target UI greyed out as well as crash when clicking on a particle slot without a valid target 2019-09-13 09:56:13 +02:00

It goes a bit further than that. After debugging the error, I found out that, when setting the physics' type to keyed, and proceeding to trigger the crash, the object's particle system somehow loses it's psys->particles reference, which in turn makes it return a psys->totpart of 0, which makes the object become an "invalid target", which makes the gpu_batch module thingie crash because verts is 0. I've been trying to find out why the particle reference is clearing its psys->particles.
Maybe there's something that's missing, something i don't understand about blender's pipeline.

It goes a bit further than that. After debugging the error, I found out that, when setting the physics' type to keyed, and proceeding to trigger the crash, the object's particle system somehow loses it's psys->particles reference, which in turn makes it return a psys->totpart of 0, which makes the object become an "invalid target", which makes the gpu_batch module thingie crash because `verts` is 0. I've been trying to find out why the particle reference is clearing its psys->particles. Maybe there's something that's missing, something i don't understand about blender's pipeline.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-13 22:27:36 +02:00
Member

I've pushed fixes for both problems, the one you describe was because code skipped the vertex buffer creation in case of keyed particles without a valid target.
So this should be resolved, feel free however to comment again if issues persist...

I've pushed fixes for both problems, the one you describe was because code skipped the vertex buffer creation in case of keyed particles without a valid target. So this should be resolved, feel free however to comment again if issues persist...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69741
No description provided.